[package]
name = "celers-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for CeleRS worker and queue management"
keywords = ["celery", "cli", "worker", "queue", "management"]
categories = ["asynchronous", "command-line-utilities"]

[[bin]]
name = "celers"
path = "src/main.rs"

[dependencies]
celers-core = { path = "../celers-core" }
celers-worker = { path = "../celers-worker" }
celers-broker-redis = { path = "../celers-broker-redis" }
celers-broker-postgres = { path = "../celers-broker-postgres" }
celers-metrics = { path = "../celers-metrics" }
clap = { workspace = true }
clap_complete = "4.5.65"
clap_mangen = "0.2.31"
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
redis = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
toml = "0.9.11"
tabled = "0.20.0"
colored = "3.1.1"
reqwest = { version = "0.13", features = ["json"] }
ratatui = "0.30"
crossterm = "0.29"
rustyline = "17.0"
csv = "1.4"
flate2 = "1.1"
tar = "0.4"
dirs = "6.0"

[dev-dependencies]
tempfile = "3.24.0"
