[package]
name = "celers-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits and types for CeleRS distributed task queue"
keywords = ["celery", "task-queue", "distributed", "async", "traits"]
categories = ["asynchronous", "network-programming"]

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
oxicode = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
num_cpus = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "task_bench"
harness = false

[[bench]]
name = "advanced_bench"
harness = false
