[package]
name = "celers-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for CeleRS task definitions (#[task], #[derive(Task)])"
keywords = ["celery", "macros", "procedural", "task", "derive"]
categories = ["asynchronous", "development-tools"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.43"
syn = { version = "2.0.114", features = ["full"] }
proc-macro2 = "1.0.105"

[dev-dependencies]
async-trait = "0.1"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["macros", "rt", "rt-multi-thread"] }

# Examples dependencies
[[example]]
name = "validation"
required-features = []
