[package]
name = "celers-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for CeleRS task definitions (#[task], #[derive(Task)])"
keywords = ["celery", "macros", "procedural", "task", "derive"]
categories = ["asynchronous", "development-tools"]

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

# Examples dependencies
[[example]]
name = "validation"
required-features = []
