[package]
name = "celers-protocol"
version = "0.1.0"
edition = "2021"
authors = ["CeleRS Contributors"]
description = "Celery Protocol v2/v5 implementation for CeleRS"
keywords = ["celery", "protocol", "messaging", "serialization", "kombu"]
categories = ["encoding", "network-programming"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/celers"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = { version = "0.4", optional = true }

# Optional serialization formats
rmp-serde = { version = "1.3", optional = true }  # MessagePack
bincode = { version = "2.0.0-rc.3", optional = true }  # Binary
serde_yaml = { version = "0.9", optional = true }  # YAML

# Optional compression
flate2 = { version = "1.0", optional = true }  # gzip/deflate
zstd = { version = "0.13", optional = true }  # Zstandard

# Optional security/crypto
hmac = { version = "0.12", optional = true }  # HMAC for message signing
sha2 = { version = "0.10", optional = true }  # SHA-256 for HMAC
aes-gcm = { version = "0.10", optional = true }  # AES-256-GCM encryption

# Optional serialization formats
prost = { version = "0.13", optional = true }  # Protobuf
bson = { version = "2.13", optional = true }  # BSON

[features]
default = ["json"]
json = []
msgpack = ["rmp-serde"]
binary = ["bincode"]
yaml = ["serde_yaml"]
protobuf = ["prost"]
bson-format = ["bson"]
gzip = ["flate2"]
zstd-compression = ["zstd"]
compression = ["gzip", "zstd-compression"]
signing = ["hmac", "sha2", "hex"]
encryption = ["aes-gcm", "hex"]
crypto = ["signing", "encryption"]
all-serializers = ["msgpack", "yaml", "protobuf", "bson-format"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "message_benchmarks"
harness = false
